# DATUM-controll

./: Schaltschrank - Blockdiagramm  Schaltschrank.drawio  pyproject.toml
src/controller/: main.py
src/controller/core/backends/: linuxcnc.py  simulated.py
src/controller/domain/: models.py
